cabal-version:       2.4
name:                wai-middleware-validation
version:             0.1.0.2
synopsis:            WAI Middleware to validate the request and response bodies
description:         wai-middleware-validation is a WAI Middleware that automates the validation of request and response bodies. It validates JSON format bodies according to the schema defined in the OpenAPI document.
homepage:            https://iij-ii.github.io/wai-middleware-validation/
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kenzo Yotsuya
maintainer:          kyotsuya@iij-ii.co.jp
copyright:           IIJ Innovation Institute Inc.
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , ChangeLog.md

library
  hs-source-dirs:     src
  exposed-modules:    Network.Wai.Middleware.Validation,
                      Network.Wai.Middleware.OpenApi,
                      Network.Wai.Middleware.Helpers
  build-depends:      base >= 4.7 && < 5
                    , aeson
                    , bytestring
                    , case-insensitive
                    , containers
                    , filepath
                    , hashable
                    , http-media >= 0.8
                    , http-types
                    , lens
                    , mtl
                    , network
                    , parallel
                    , regex-tdfa
                    , safe-exceptions
                    , scientific
                    , semialign
                    , template-haskell
                    , text
                    , these
                    , unordered-containers
                    , validation  >= 1.1 && < 1.2
                    , vector
                    , wai
  default-language: Haskell2010
  ghc-options: -Wall -Wno-missing-signatures -Wmissing-exported-signatures

test-suite wai-middleware-validation-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Network.Wai.Middleware.ValidationSpec
                       -- Network.Wai.Middleware.Validation.InternalSpec
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , here
                     , hspec
                     , http-types
                     , predicate-transformers
                     , wai
                     , wai-extra
                     , wai-middleware-validation
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kadena-io/wai-middleware-validation
